# flowshield

./: LICENSE  README.md  pyproject.toml
examples/: demo.py  example_schema.json  flows.csv
flowshield/: __init__.py  cli.py  core.py  exceptions.py  io.py  profile.py  profiles.py  repair.py  report.py  rules.py  schema.py  validate.py
tests/: test_cli.py  test_repair.py  test_rules.py  test_schema.py  test_validate.py
