[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowshield"
version = "0.1.0"
authors = [{name = "Zaid Abdullah Khalil"}]
description = "Constraints, validation, and repair for network-flow features."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.6",
  "typer>=0.9",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
flowshield = "flowshield.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
